--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+**/db.properties
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
